--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,5 +5,8 @@
     // TODO: SUPPORTED TYPESCRIPT VERSIONS: >=4.7.4 <5.6.0の解消
     "warnOnUnsupportedTypeScriptVersion": false
   },
-  "extends": ["airbnb", "airbnb-typescript", "prettier"]
+  "extends": ["airbnb", "airbnb-typescript", "prettier"],
+  "rules": {
+    "consistent-return": "off"
+  }
 }
