--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,5 +8,13 @@
   "extends": ["airbnb", "airbnb-typescript", "prettier"],
   "rules": {
     "consistent-return": "off"
-  }
+  },
+  "ignorePatterns": [
+    "node_modules/",
+    "dist/",
+    "coverage/",
+    "build/",
+    "src/components/ui",
+    "src/lib/utils.ts"
+  ]
 }
