--- a/package.json
+++ b/package.json
@@ -27,15 +27,21 @@
   "dependencies": {
     "@prisma/client": "^6.5.0",
     "@prisma/extension-accelerate": "^1.2.2",
+    "@radix-ui/react-slot": "^1.1.2",
     "@remix-run/cloudflare": "^2.8.1",
     "@remix-run/cloudflare-pages": "^2.8.1",
     "@remix-run/react": "^2.8.1",
     "@tailwindcss/vite": "^4.0.8",
     "bcrypt": "^5.1.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "hono": "^4.6.18",
+    "lucide-react": "^0.487.0",
     "pino": "^9.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "tailwind-merge": "^3.1.0",
+    "tw-animate-css": "^1.2.5",
     "uuid": "^11.0.5",
     "zod": "^3.24.1"
   },
