--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -97,14 +97,15 @@ jobs:
         id: check-frontend
         uses: ./.github/actions/diff
         with:
-          subdir: src/app
+          subdir: 'src/app src/components'
+          exclude_pattern: 'src/components/ui'
 
       - name: バックエンドの差分チェック
         id: check-backend
         uses: ./.github/actions/diff
         with:
           subdir: src
-          exclude_pattern: 'src/app/ src/middleware/ src/logger/'
+          exclude_pattern: 'src/app/ src/middleware/ src/logger/ src/lib src/components/'
 
       - name: 差分結果の表示
         run: |
