--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,7 +7,8 @@
   },
   "extends": ["airbnb", "airbnb-typescript", "prettier"],
   "rules": {
-    "consistent-return": "off"
+    "consistent-return": "off",
+    "import/extensions": "off"
   },
   "ignorePatterns": [
     "node_modules/",
