fix: tsc, format

--- a/.prettierignore
+++ b/.prettierignore
@@ -5,5 +5,5 @@
 prisma/ERD.md
 
 # shadcnのコンポーネントの自動生成ファイル
-src/components/ui
-src/lib/utils.ts
+src/application/web/ui
+src/application/web/lib/utils.ts
