--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -97,8 +97,8 @@ jobs:
         id: check-frontend
         uses: ./.github/actions/diff
         with:
-          subdir: 'src/app src/components'
-          exclude_pattern: 'src/components/ui'
+          subdir: 'src/application/web src/application/web/components'
+          exclude_pattern: 'src/application/web/components/ui'
 
       - name: バックエンドの差分チェック
         id: check-backend
