--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
 API_BASE_URL=http://localhost:5173
-DATABASE_URL=postgresql://postgres:password@localhost:5432/trend_diary
+DATABASE_URL=postgresql://postgres:password@localhost:5432/postgres
