add: vscodeはmarkdownはsnippetがデフォルトで無効らしいので有効にする

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,5 +14,15 @@
   "cSpell.words": [
     "Supabase",
     "Timestamptz"
-  ]
+  ],
+  "[markdown]":  {
+      "editor.wordWrap": "on",
+      "editor.quickSuggestions": {
+          "comments": "on",
+          "strings": "on",
+          "other": "on"
+      },
+      "editor.snippetSuggestions": "top"
+  }
+
 }
