--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "pino": "^9.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "rss-parser": "^3.13.0",
     "tailwind-merge": "^3.1.0",
     "tw-animate-css": "^1.2.5",
     "uuid": "^11.0.5",
