fix: bcryptはcloudflareで動作しないため、bcryptjsに変更

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "npm": ">=8.0.0"
   },
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
+    "dev": "remix vite:dev",
+    "build": "remix vite:build",
     "preview": "wrangler pages dev",
     "deploy": "npm run build && wrangler pages deploy",
     "test": "vitest run",
@@ -35,10 +35,11 @@
     "@remix-run/cloudflare-pages": "^2.8.1",
     "@remix-run/react": "^2.8.1",
     "@tailwindcss/vite": "^4.0.8",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "hono": "^4.6.18",
+    "hono-remix-adapter": "^0.5.4",
     "lucide-react": "^0.487.0",
     "pino": "^9.6.0",
     "react": "^18.2.0",
@@ -54,7 +55,7 @@
     "@hono/vite-dev-server": "^0.18.1",
     "@prisma/generator-helper": "^6.5.0",
     "@remix-run/dev": "^2.8.1",
-    "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@types/uuid": "^10.0.0",
