--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,4 +1,4 @@
-name = "my-app"
+name = "trend-diary"
 compatibility_date = "2025-01-25"
 pages_build_output_dir = "./dist"
 compatibility_flags = [ "nodejs_compat" ]
