--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,6 @@
 name = "trend-diary"
 compatibility_date = "2025-01-25"
-pages_build_output_dir = "./dist"
+pages_build_output_dir = "./dist/client" # ビルド設定の「ビルド出力ディレクトリ」のこと。clientを設定しないとCSS, JSファイルを読み込めない
 compatibility_flags = [ "nodejs_compat" ]
 
 # [vars]
