--- a/.github/workflows/prevent_supabase_paused.yaml
+++ b/.github/workflows/prevent_supabase_paused.yaml
@@ -23,10 +23,11 @@ jobs:
       - name: Create Ping Script
         run: |
           cat > pingSupabase.js << 'EOL'
+          import { createClient } from '@supabase/supabase-js';
+
           (async () => {
             try {
               // Supabaseクライアント作成
-              const { createClient } = require('@supabase/supabase-js');
               const supabase = createClient(process.env.SUPABASE_URL, process.env.SUPABASE_KEY);
               
               // シンプルなシステムテーブルを使ってみる
