chore: CI設定にpackage.jsonとpackage-lock.jsonの変更を追加

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,6 +12,8 @@ on:
       - '.github/workflows/ci.yaml'
       - 'vitest.config.frontend.ts'
       - 'vitest.config.backend.ts'
+      - 'package.json'
+      - 'package-lock.json'
 
 # カバレッジの可視化で、コメントを残すための権限
 permissions:
