--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -38,6 +38,26 @@
           "other": "on"
       },
       "editor.snippetSuggestions": "top"
-  }
-
+  },
+  "deno.enable": true,
+  "deno.enablePaths": [
+    "supabase/functions"
+  ],
+  "deno.lint": true,
+  "deno.importMap": "supabase/functions/fetch_articles/deno.json",
+  "deno.unstable": [
+    "bare-node-builtins",
+    "byonm",
+    "sloppy-imports",
+    "unsafe-proto",
+    "webgpu",
+    "broadcast-channel",
+    "worker-options",
+    "cron",
+    "kv",
+    "ffi",
+    "fs",
+    "http",
+    "net"
+  ],
 }
