--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,9 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
-    }
-  }
+    },
+  },
+  "exclude": [
+    "supabase/functions"
+  ]
 }
