chore: ESLintの無視パターンにsupabase/functionsを追加

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,7 @@
     "coverage/",
     "build/",
     "src/application/web/components/ui",
-    "src/application/web/lib/utils.ts"
+    "src/application/web/lib/utils.ts",
+    "supabase/functions"
   ]
 }
