--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -155,7 +155,9 @@ jobs:
           fail_command: docker compose down
 
       - name: DB Migration
-        run: npm run db:migrate
+        run: |
+          export DIRECT_URL={{ env.DATABASE_URL }}
+          npm run db:migrate
 
       - name: バックエンドのテスト
         uses: ./.github/actions/test_cov
