--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -156,7 +156,7 @@ jobs:
 
       - name: DB Migration
         run: |
-          export DIRECT_URL={{ env.DATABASE_URL }}
+          export DIRECT_URL=${{ env.DATABASE_URL }}
           npm run db:migrate
 
       - name: バックエンドのテスト
