feat: バックエンドテストの実行に必要な環境変数DIRECT_URLを設定

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -142,6 +142,8 @@ jobs:
     needs: setup-test
     runs-on: ${{ needs.setup-test.outputs.test_runner }}
     if: ${{ needs.setup-test.outputs.run_backend_test == 'true' }}
+    env:
+      DIRECT_URL: ${{ env.DATABASE_URL }}
     steps:
       - uses: actions/checkout@v4
       - name: Node.jsの構築
