--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -25,10 +25,12 @@ jobs:
         run: npm run build
 
       - name: デプロイ
+        id: deploy
         uses: cloudflare/wrangler-action@v3
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          command: pages deploy
 
       - name: デプロイの出力を表示
         env:
