--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -28,6 +28,7 @@ concurrency:
 # 共通の設定を定義
 env:
   NODE_VERSION_FILE: .node-version
+  DENO_VERSION: 2.0.6
   DATABASE_URL: postgresql://postgres:password@localhost:5432/postgres # Supabase側で変更できず、Supabaseの設定と整合性を保つため
   DIRECT_URL: postgresql://postgres:password@localhost:5432/postgres # migrationのために必要な環境変数
 
@@ -57,6 +58,18 @@ jobs:
       - name: Lint
         run: npm run lint
 
+  deno-lint:
+    needs: setup-config
+    runs-on: ${{ needs.setup-config.outputs.runner }}
+    steps:
+      - uses: actions/checkout@v4
+      - name: Denoの構築
+        uses: denoland/setup-deno@v2
+        with:
+          deno-version: ${{ env.DENO_VERSION }}
+      - name: Deno Lint
+        run: deno lint -c supabase/functions/deno.json
+
   format:
     needs: setup-config
     runs-on: ${{ needs.setup-config.outputs.runner }}
@@ -69,6 +82,18 @@ jobs:
 
       - name: Format
         run: npm run format
+
+  deno-forma:
+    needs: setup-config
+    runs-on: ${{ needs.setup-config.outputs.runner }}
+    steps:
+      - uses: actions/checkout@v4
+      - name: Denoの構築
+        uses: denoland/setup-deno@v2
+        with:
+          deno-version: ${{ env.DENO_VERSION }}
+      - name: Deno format
+        run: deno fmt -c supabase/functions/deno.json
 
   # 本来であれば、概念的にコンパイルはLint/Formatと同列ではないが、実行時間短縮のために並列実行にしている
   ts-compile-check:
