--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,6 +14,7 @@ on:
       - 'vitest.config.backend.ts'
       - 'package.json'
       - 'package-lock.json'
+      - 'supabase/functions/deno.json'
 
 # カバレッジの可視化で、コメントを残すための権限
 permissions:
@@ -68,7 +69,7 @@ jobs:
         with:
           deno-version: ${{ env.DENO_VERSION }}
       - name: Deno Lint
-        run: deno lint -c supabase/functions/deno.json
+        run: deno lint -c ./supabase/functions/deno.json
 
   format:
     needs: setup-config
@@ -93,7 +94,7 @@ jobs:
         with:
           deno-version: ${{ env.DENO_VERSION }}
       - name: Deno format
-        run: deno fmt -c supabase/functions/deno.json
+        run: deno fmt -c ./supabase/functions/deno.json
 
   # 本来であれば、概念的にコンパイルはLint/Formatと同列ではないが、実行時間短縮のために並列実行にしている
   ts-compile-check:
