--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -70,9 +70,7 @@ jobs:
           deno-version: ${{ env.DENO_VERSION }}
       - name: Deno Lint
         run: |
-          ls -lah
-          ls supabase
-          deno lint -c ./supabase/functions/deno.json
+          deno lint -c supabase/functions/fetch_articles/deno.json
 
   format:
     needs: setup-config
@@ -97,7 +95,7 @@ jobs:
         with:
           deno-version: ${{ env.DENO_VERSION }}
       - name: Deno format
-        run: deno fmt -c ./supabase/functions/deno.json
+        run: deno fmt -c supabase/functions/fetch_articles/deno.json
 
   # 本来であれば、概念的にコンパイルはLint/Formatと同列ではないが、実行時間短縮のために並列実行にしている
   ts-compile-check:
