--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,7 +15,6 @@
     "dist/",
     "coverage/",
     "build/",
-    "src/application/web/components/ui",
-    "src/application/web/lib/utils.ts"
+    "src/application/web/components/ui"
   ]
 }
