chore: supabaseの型生成スクリプトをpackage.jsonに追加

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "db:migrate:sql-only": "npx prisma migrate dev --skip-seed --skip-generate",
     "db:migrate:deploy": "npx prisma migrate deploy",
     "db:reset": "npx prisma migrate reset --skip-seed",
-    "db:studio": "npx prisma studio"
+    "db:studio": "npx prisma studio",
+    "supabase:db:type-gen": "npx supabase gen types typescript --local"
   },
   "dependencies": {
     "@prisma/client": "^6.5.0",
