--- a/.github/workflows/functions_ci.yaml
+++ b/.github/workflows/functions_ci.yaml
@@ -13,8 +13,7 @@ on:
 
 env:
   DENO_VERSION: 2.0.6
-  FUNCTIONS: fetch_articles
-
+  EXCLUDE_FUNCTIONS: ("infrastructure")
 jobs:
   lint:
     runs-on: ubuntu-latest
@@ -26,8 +25,10 @@ jobs:
           deno-version: ${{ env.DENO_VERSION }}
       - name: Lint
         run: |
-          for function_name in ${{ env.FUNCTIONS }}; do
-            deno lint -c supabase/functions/${function_name}/deno.json
+          for function_name in $(ls supabase/functions); do
+            if [[ ! " ${EXCLUDE_FUNCTIONS[@]} " =~ " ${function_name} " ]]; then
+              deno lint -c supabase/functions/${function_name}/deno.json
+            fi
           done
 
   format:
@@ -40,6 +41,8 @@ jobs:
           deno-version: ${{ env.DENO_VERSION }}
       - name: Format
         run: |
-          for function_name in ${{ env.FUNCTIONS }}; do
-            deno fmt -c supabase/functions/${function_name}/deno.json
+          for function_name in $(ls supabase/functions); do
+            if [[ ! " ${EXCLUDE_FUNCTIONS[@]} " =~ " ${function_name} " ]]; then
+              deno fmt -c supabase/functions/${function_name}/deno.json
+            fi
           done
