refactor: qiita分だけ実装。executorで抽象化

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,8 +27,10 @@
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "cSpell.words": [
+    "qiita",
     "Supabase",
-    "Timestamptz"
+    "Timestamptz",
+    "zenn"
   ],
   "[markdown]":  {
       "editor.wordWrap": "on",
