--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
     "db:reset": "npx prisma migrate reset --skip-seed",
     "db:studio": "npx prisma studio"
   },
+  "prisma": {
+    "schema": "./prisma"
+  },
   "dependencies": {
-    "@prisma/client": "^6.5.0",
+    "@prisma/client": "^6.7.0",
     "@prisma/extension-accelerate": "^1.2.2",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-label": "^2.1.2",
@@ -69,7 +72,7 @@
     "eslint-config-prettier": "^10.1.1",
     "prettier": "3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "prisma": "^6.5.0",
+    "prisma": "^6.7.0",
     "prisma-erd-generator": "^2.0.4",
     "remix-hono": "^0.0.16",
     "tailwindcss": "^4.0.8",
