--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "schema": "./prisma"
   },
   "dependencies": {
+    "@hono/zod-validator": "^0.5.0",
     "@prisma/client": "^6.7.0",
     "@prisma/extension-accelerate": "^1.2.2",
     "@radix-ui/react-checkbox": "^1.1.4",
