--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -24,7 +24,7 @@ concurrency:
 jobs:
   web:
     runs-on: ubuntu-latest
-    if: ${{ github.event.workflow_run.conclusion == 'success' || github.event.inputs.deploy_type == 'web' }}
+    if: ${{ (github.event.workflow_run && github.event.workflow_run.conclusion == 'success') || github.event.inputs.deploy_type == 'web' }}
     steps:
       - uses: actions/checkout@v4
       - name: Node.jsの構築
@@ -53,7 +53,7 @@ jobs:
       DATABASE_URL: ${{ secrets.DATABASE_URL }}
       DIRECT_URL: ${{ secrets.DIRECT_DATABASE_URL }}
     runs-on: ubuntu-latest
-    if: ${{ github.event.workflow_run.conclusion == 'success' || github.event.inputs.deploy_type == 'database' }}
+    if: ${{ (github.event.workflow_run && github.event.workflow_run.conclusion == 'success') || github.event.inputs.deploy_type == 'database' }}
     steps:
       - uses: actions/checkout@v4
       - name: Node.jsの構築
