fix: デプロイの種類の説明を修正

--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -9,7 +9,7 @@ on:
   workflow_dispatch:
     inputs:
       deploy_type:
-        description: デプロイの種類
+        description: 対象リソース
         required: true
         default: web
         type: choice
