--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -17,6 +17,9 @@ on:
           - web
           - database
 
+env:
+  HAS_CI_SUCCEEDED: ${{ github.event.workflow_run && github.event.workflow_run.conclusion == 'success' }}
+
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref_name }}
   cancel-in-progress: true
@@ -24,7 +27,7 @@ concurrency:
 jobs:
   web:
     runs-on: ubuntu-latest
-    if: ${{ (github.event.workflow_run && github.event.workflow_run.conclusion == 'success') || github.event.inputs.deploy_type == 'web' }}
+    if: ${{ github.env.HAS_CI_SUCCEEDED || github.event.inputs.deploy_type == 'web' }}
     steps:
       - uses: actions/checkout@v4
       - name: Node.jsの構築
@@ -53,7 +56,7 @@ jobs:
       DATABASE_URL: ${{ secrets.DATABASE_URL }}
       DIRECT_URL: ${{ secrets.DIRECT_DATABASE_URL }}
     runs-on: ubuntu-latest
-    if: ${{ (github.event.workflow_run && github.event.workflow_run.conclusion == 'success') || github.event.inputs.deploy_type == 'database' }}
+    if: ${{ github.env.HAS_CI_SUCCEEDED || github.event.inputs.deploy_type == 'database' }}
     steps:
       - uses: actions/checkout@v4
       - name: Node.jsの構築
