refactor: Lintおよびフォーマット処理を関数に抽象化

--- a/.github/workflows/functions_ci.yaml
+++ b/.github/workflows/functions_ci.yaml
@@ -15,22 +15,32 @@ env:
   DENO_VERSION: 2.3.1
   EXCLUDE_FUNCTIONS: ("infrastructure")
 jobs:
-  lint:
+  setup:
     runs-on: ubuntu-latest
+    outputs:
+      runner: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Define functions
+        run: |
+          runs_on_each_function() {
+            local command=$1
+            local exclude_functions=${{ env.EXCLUDE_FUNCTIONS }}
+            for function_name in $(ls supabase/functions); do
+              if [[ ! " ${exclude_functions[@]} " =~ " ${function_name} " ]]; then
+                $command -c supabase/functions/${function_name}/deno.json
+              fi
+            done
+          }
+  lint:
+    needs: setup
+    runs-on: ${{ needs.setup.outputs.runner }}
+    steps:
       - name: Denoの構築
         uses: denoland/setup-deno@v2
         with:
           deno-version: ${{ env.DENO_VERSION }}
       - name: Lint
-        run: |
-          exclude_functions=${{ env.EXCLUDE_FUNCTIONS }}
-          for function_name in $(ls supabase/functions); do
-            if [[ ! " ${exclude_functions[@]} " =~ " ${function_name} " ]]; then
-              deno lint -c supabase/functions/${function_name}/deno.json
-            fi
-          done
+        run: runs_on_each_function "deno lint"
 
   format:
     runs-on: ubuntu-latest
@@ -41,10 +51,4 @@ jobs:
         with:
           deno-version: ${{ env.DENO_VERSION }}
       - name: Format
-        run: |
-          exclude_functions=${{ env.EXCLUDE_FUNCTIONS }}
-          for function_name in $(ls supabase/functions); do
-            if [[ ! " ${exclude_functions[@]} " =~ " ${function_name} " ]]; then
-              deno fmt -c supabase/functions/${function_name}/deno.json
-            fi
-          done
+        run: runs_on_each_function "deno fmt"
