--- a/.github/actions/runs_on_each_supabase_functions/action.yaml
+++ b/.github/actions/runs_on_each_supabase_functions/action.yaml
@@ -14,6 +14,7 @@ runs:
   using: 'composite'
   steps:
     - name: RUN
+      shell: bash
       run: |
         echo "${{ inputs.EXCLUDE_FUNCTIONS }}"
         exclude_functions=${{ inputs.EXCLUDE_FUNCTIONS }}
